cc: Add missed GpuMemoryBuffer:SetColorSpace call

This call is necessary to set the color space property on the backing
IOSurface.

It may be that we should change this API to require specifying a color
space a GpuMemoryBuffer creation time. That would be an artifical
constraint, but would make bugs of this sort less likely.

This needs a merge to M66, so I'm not considering it in this patch.

Bug: 827670
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: If5ecdc5a8efcefcf1fcbc9c8a230cd716005ac2e
Reviewed-on: https://chromium-review.googlesource.com/988826
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547872}
Former-commit-id: 3cf3eea9fbe8973db19894c1a008f7dcbbe4458d